--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.missing, .network, .unclamed {
+.missing, .network, .unclamed, .warning {
     display: inline-block;
     padding: 5px;
     margin: 1px 0;
@@ -13,7 +13,7 @@
     background-color: #bbffbb;
 }
 
-.unclamed {
+.unclamed, .warning {
     background-color: #ffff99;
 }
 
